--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h3>Maintenance & Support</h3>
             <p>Reliable support to keep your website running smoothly.</p>
             </div>
-            </div>
+            <div>
             <a href="services.html" class="cta-link" aria-label="Explore all our services">Explore All Services</a>
             </div>
         </section>
