--- a/services.html
+++ b/services.html
@@ -55,42 +55,42 @@
             <p class="section-description">We offer a range of services tailored to meet the needs of trade businesses, including web design, SEO, and digital marketing.</p>
             <div class="services-grid">
                 <article class="service-item" aria-labelledby="service-web-design">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/web-design.png" alt="Web Design Icon" class="service-icon">
+                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/web-design.png" alt="web-design"/>
                     <h3 id="service-web-design" class="service-title">Web Design</h3>
                     <p class="service-description">Creating visually stunning and user-friendly websites that reflect your brand.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-seo">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/seo.png" alt="SEO Icon" class="service-icon">
+                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/laptop-metrics.png" alt="laptop-metrics"/>
                     <h3 id="service-seo" class="service-title">SEO</h3>
                     <p class="service-description">Optimizing your website to improve visibility and drive traffic.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-digital-marketing">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/digital-marketing.png" alt="Digital Marketing Icon" class="service-icon">
+                    <img src="./images/icons/digital-marketing.svg" alt="Digital Marketing Icon" class="service-icon">
                     <h3 id="service-digital-marketing" class="service-title">Digital Marketing</h3>
                     <p class="service-description">Helping you reach your audience through effective online marketing strategies.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-branding">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/branding.png" alt="Branding Icon" class="service-icon">
+                    <img src="./images/icons/branding.svg" alt="Branding Icon" class="service-icon">
                     <h3 id="service-branding" class="service-title">Branding</h3>
                     <p class="service-description">Developing a cohesive brand identity that resonates with your target audience.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-content-creation">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/content.png" alt="Content Creation Icon" class="service-icon">
+                    <img src="./images/icons/content-creation.svg" alt="Content Creation Icon" class="service-icon">
                     <h3 id="service-content-creation" class="service-title">Content Creation</h3>
                     <p class="service-description">Producing high-quality content to engage your audience and enhance your online presence.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-maintenance">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/maintenance.png" alt="Website Maintenance Icon" class="service-icon">
+                    <img src="./images/icons/maintenance.svg" alt="Website Maintenance Icon" class="service-icon">
                     <h3 id="service-maintenance" class="service-title">Website Maintenance</h3>
                     <p class="service-description">Ensuring your website stays updated, secure, and running smoothly.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-ecommerce">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/ecommerce.png" alt="E-Commerce Icon" class="service-icon">
+                    <img src="./images/icons/ecommerce.svg" alt="E-Commerce Icon" class="service-icon">
                     <h3 id="service-ecommerce" class="service-title">E-Commerce Solutions</h3>
                     <p class="service-description">Building robust online stores to help you sell your products and services effectively.</p>
                 </article>
                 <article class="service-item" aria-labelledby="service-analytics">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/combo-chart.png" alt="Analytics Icon" class="service-icon">
+                    <img src="./images/icons/analytics.svg" alt="Analytics Icon" class="service-icon">
                     <h3 id="service-analytics" class="service-title">Analytics & Reporting</h3>
                     <p class="service-description">Providing insights and data-driven strategies to optimize your online performance.</p>
                 </article>
